--- a/output/hol.yaml
+++ b/output/hol.yaml
@@ -1,4 +1,4 @@
-model_name: PlateWithHole
+model_name: my_model
 description: ''
 geometry:
   type: plate_with_hole
@@ -8,7 +8,7 @@ geometry:
   hole_y: 1.0
   hole_radius: 0.3
 mesh:
-  size: 0.05
+  size: 0.1
   element_type: triangle
   algorithm: null
 material:
@@ -26,6 +26,6 @@ loads:
   location: right
   physical_id: 200
   force:
-    x: 0.0
-    y: -1000.0
+    x: 1000.0
+    y: 0.0
   distribution: uniform
